crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_return_multiple_items.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.name, n.age, n.id\")"
---
MATCH (n)
RETURN n.name, n.age, n.id
