crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_skip_limit.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n SKIP 10 LIMIT 5\")"
---
MATCH (n)
RETURN n
SKIP 10
LIMIT 5
