crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_unwind.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"UNWIND [1,2,3] AS x RETURN x\")"
---
UNWIND [1,2,3] AS x
RETURN x
