crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_where_and.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.a > 1 AND n.b < 2 RETURN n\")"
---
MATCH (n)
WHERE n.a > 1 AND n.b < 2
RETURN n
