crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_where_or.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.a > 1 OR n.b < 2 RETURN n\")"
---
MATCH (n)
WHERE n.a > 1 OR n.b < 2
RETURN n
